# teplomerAPI

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Dockerfile  LICENSE.txt  README.md  config.json  config_template.json  main.cc  openAPI.yaml  openapi.json  teplomerAPI.cpp  teplomerAPI.h  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
controllers/: AuthController.cc  AuthController.h  ControllerBase.h  DevicesController.cc  DevicesController.h  FireportDeviceController.cc  FireportDeviceController.h  HeaterController.cc  HeaterController.h  SensorData.cc  SensorData.h  SystemController.cc  SystemController.h  UsersController.cc  UsersController.h  WeatherStationDataController.cc  WeatherStationDataController.h
controllers/callbacks/: ICallbackBase.h  SensorDataCallback.cpp  SensorDataCallback.h
controllers/exceptionWrapper/: TryFacadeCall.h  TryNumberParsing.h
controllers/ownershipUtils/: Ownership.h
controllers/responses/: Response.cpp  Response.h
doc/: redoc-static.html
enc_temp_folder/144fc425d6d088edeaf4b5ff089c078/: WeatherFilter.h
enums/: DeviceType.h  FireportDeviceType.h  UserRoles.h
facades/: BaseFacade.cpp  BaseFacade.h  DevicesFacade.cpp  DevicesFacade.h  FacadeBase.h  FireportDeviceDataFacade.cpp  FireportDeviceDataFacade.h  SensorDataFacade.cpp  SensorDataFacade.h  UsersFacade.cpp  UsersFacade.h  WeatherStationDataFacade.cpp  WeatherStationDataFacade.h
facades/EMQX_provisioning/: EMQX.cpp  EMQX.h
facades/mapper/: JoinCoroMapper.h
facades/utils/jwt/: JWT.cc  JWT.h
facades/utils/passwdhash/: passwdhash.cpp  passwdhash.hpp
filters/: AdminFilter.cc  AdminFilter.h  Cors.cc  Cors.h  FilterAliases.h  JwtFilter.cc  JwtFilter.h  ResourceOwnerFilter.cc  ResourceOwnerFilter.h
models/: DrogonModelBase.h  IDrogonModel.h  SensorData.cc  SensorData.h  model.json
models/auth_model/: AuthModel.h
models/filter_model/: FireportDeviceFilter.h  IFilterModel.h  WeatherFilter.h
models/list_model/: DevicesList.cpp  DevicesList.h  FireportDeviceDataList.cpp  FireportDeviceDataList.h  IListModel.h  SensorDataList.cpp  SensorDataList.h  UsersList.cpp  UsersList.h  WeatherStationDataList.cpp  WeatherStationDataList.h
models/model_interface/: IModel.h  IOrmModel.h  IUserModel.h
models/model_mapper/: EMQXMapper.cpp  EMQXMapper.h  IModelMapper.h
models/model_utils/: ModelUtils.cpp  ModelUtils.h  mvector.h
models/orm_model/: Devices.cc  Devices.h  FireportDeviceData.cc  FireportDeviceData.h  IDevices.h  IFireportDeviceData.h  ISensorData.h  IUsers.h  IWeatherStationData.h  SensorData.h  Users.cc  Users.h  WeatherStationData.cc  WeatherStationData.h  model_template.json
models/request/: SensorDataRequest.cpp  SensorDataRequest.h
models/request_model/: DevicesRequest.cpp  DevicesRequest.h  FireportDeviceDataRequest.cpp  FireportDeviceDataRequest.h  IRequestModel.h  SensorDataRequest.cpp  SensorDataRequest.h  UsersRequest.cpp  UsersRequest.h  WeatherStationDataRequest.cpp  WeatherStationDataRequest.h
plugins/: FacadeProvider.cpp  FacadeProvider.h
plugins/facades/: BaseFacade.cc  BaseFacade.h  SensorDataFacade.cpp  SensorDataFacade.h
sql/: sensor_data.sql  version1.sql  version2.sql  version3.sql  version4.sql
test/: CMakeLists.txt
